# WinEventEngine

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
actions/: Cargo.toml
actions/src/: lib.rs
docs/: Architecture.md  Configuration-Reference.md  GUI-Guide.md  Home.md  Troubleshooting.md
engine/: Cargo.toml
engine/src/: config.rs  engine.rs  lib.rs  main.rs  service.rs
engine/src/plugins/: window_watcher.rs
engine_core/: Cargo.toml
engine_core/src/: event.rs
gui/: Cargo.toml  build.rs
gui/src/: app.rs  main.rs  theme.rs
gui/src/components/: mod.rs
gui/src/views/: dashboard.rs  mod.rs  rules.rs  settings.rs  sources.rs  tester.rs
metrics/: Cargo.toml
metrics/src/: lib.rs  server.rs
tui/: Cargo.toml
tui/src/: main.rs
