[package]
name = "actions"
version.workspace = true
edition.workspace = true

[dependencies]
engine_core = { path = "../engine_core" }
tracing = "0.1"
mlua = { version = "0.9", features = ["lua54", "vendored", "send", "serialize"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5"
chrono = "0.4"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_LibraryLoader"] }

[dev-dependencies]
tempfile = "3"
