[package]
name = "engine_core"
version.workspace = true
edition.workspace = true

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
